# viixoo_app_engine

./: .gitignore  .pre-commit-config.yaml  README.md
viixoo_app_engine/viixoo_core/: README.md  __init__.py  pyproject.toml
viixoo_app_engine/viixoo_core/docker/: dev.DockerFile  prod.DockerFile  service.env
viixoo_app_engine/viixoo_core/tests/viixoo_core/: __init__.py  test_app.py
viixoo_app_engine/viixoo_core/tests/viixoo_core/config_tests/: __init__.py  test_config.py
viixoo_app_engine/viixoo_core/tests/viixoo_core/import_utils_tests/: test_migration_get_modules.py  test_migrations_import_module_from_path.py
viixoo_app_engine/viixoo_core/tests/viixoo_core/migration_tests/: test_create_tables.py  test_migration_get_modules.py  test_migration_postgres_tables.py  test_migrations_import_module_from_path.py  test_migrations_postgres_connections.py  test_migrations_run.py
viixoo_app_engine/viixoo_core/tests/viixoo_core/models_test/: __init__.py  test_base.py  test_domain_translator.py  test_load_model.py  test_model_create.py  test_model_delete.py  test_model_search.py  test_model_write.py  test_postgres_conn.py  test_query_delete.py  test_query_insert.py  test_query_select.py  (+1 more)
viixoo_app_engine/viixoo_core/viixoo_core/: __init__.py  app.py  config.py  controllers.py  import_utils.py  migrations.py  version.py
viixoo_app_engine/viixoo_core/viixoo_core/models/: __init__.py  base.py  domain.py  postgres.py
viixoo_app_engine/viixoo_core/viixoo_core/odoo_converter/: __init__.py  converter.py  converter_templates.py
viixoo_app_engine/viixoo_core/viixoo_core/routes/: __init__.py  base_controller.py
viixoo_app_engine/viixoo_core/viixoo_core/services/: base_service.py
(+81 files in other folders)
